<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.MainActivity">


<LinearLayout
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:orientation="vertical">
    >

    <LinearLayout
        style="@style/linearLayout">

    <LinearLayout
        style="@style/topLinearLayout"
        android:layout_width="0dp"
        android:layout_weight="0.25">

        <TextView
            style="@style/textView.number"
            android:text="@string/number"/>

        <TextView
            style="@style/textView.text"
            android:text="@string/range"/>

    </LinearLayout>

        <LinearLayout
            style="@style/line_vertical">
        </LinearLayout>

        <LinearLayout
            style="@style/topLinearLayout"
            android:layout_width="0dp"
            android:layout_weight="0.5">

            <TextView
                style="@style/textView.number"
                android:text="@string/number"/>

            <TextView
                style="@style/textView.text"
                android:text="@string/code_lines_number"/>

        </LinearLayout>

        <LinearLayout
            style="@style/line_vertical">
        </LinearLayout>

        <LinearLayout
            style="@style/topLinearLayout"
            android:layout_width="0dp"
            android:layout_weight="0.25">

            <TextView
                style="@style/textView.number"
                android:text="@string/number"/>

            <TextView
                style="@style/textView.text"
                android:text="@string/projects_number"/>

        </LinearLayout>



        </LinearLayout>


    <LinearLayout
        style="@style/linearLayout">

        <ImageView
            style="@style/icon.left"
            android:src="@drawable/ic_call_black_24dp" />

        <LinearLayout
            style="@style/infoLinearLayout">

            <android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <EditText
                    style="@style/editText"
                    android:inputType="phone"
                    android:hint="@string/phone"
                    android:text="@string/phone_number"
                    />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_phone_in_talk_black_24dp" />

    </LinearLayout>

    <LinearLayout
        style="@style/line_horizontal">
    </LinearLayout>

    <LinearLayout
        style="@style/linearLayout">

        <ImageView
            style="@style/icon.left"
            android:src="@drawable/ic_mail_black_24dp" />

        <LinearLayout
            style="@style/infoLinearLayout">

            <android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <EditText
                    style="@style/editText"
                    android:inputType="phone"
                    android:hint="@string/e_mail"
                    android:text="@string/my_mail"
                    />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_send_black_24dp" />

    </LinearLayout>

    <LinearLayout
        style="@style/line_horizontal">
    </LinearLayout>

    <LinearLayout
        style="@style/linearLayout">

        <ImageView
            style="@style/icon.left"
            android:src="@drawable/ic_vk_circle" />

        <LinearLayout
            style="@style/infoLinearLayout">

            <android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <EditText
                    style="@style/editText"
                    android:inputType="phone"
                    android:hint="@string/profile_vk"
                    android:text="@string/id_vk"
                    />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_visibility_black_24dp" />

    </LinearLayout>

    <LinearLayout
        style="@style/line_horizontal">
    </LinearLayout>

    <LinearLayout
        style="@style/linearLayout">

        <ImageView
            style="@style/icon.left"
            android:src="@drawable/github_circle" />

        <LinearLayout
            style="@style/infoLinearLayout">

            <android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <EditText
                    style="@style/editText"
                    android:inputType="phone"
                    android:hint="@string/git_rep"
                    android:text="@string/rep_name"
                    />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_visibility_black_24dp" />

    </LinearLayout>

    <LinearLayout
        style="@style/line_horizontal">
    </LinearLayout>

    <LinearLayout
        style="@style/linearLayout">

        <ImageView
            style="@style/icon.left"
            android:src="@drawable/my_circle" />

        <LinearLayout
            style="@style/infoLinearLayout">

            <android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <EditText
                    style="@style/editText"
                    android:inputType="phone"
                    android:hint="@string/about_my"
                    android:text="@string/my"
                    />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_visibility_black_24dp" />

    </LinearLayout>

    <LinearLayout
        style="@style/line_horizontal">
    </LinearLayout>

</LinearLayout>

</android.support.v4.widget.NestedScrollView>


