<?xml version="1.0" encoding="utf-8"?>
<!--<app:android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    > -->

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            style="@style/linearLayout">

            <LinearLayout
                style="@style/topLinearLayout"
                android:layout_width="0dp"
                android:layout_weight="0.25">

                <TextView
                    android:id="@+id/rating_value"
                    style="@style/textView.number"
                    android:text="@string/number"/>

                <TextView
                    style="@style/textView.text"
                    android:text="@string/range"/>

            </LinearLayout>

            <LinearLayout
                style="@style/line_vertical">
            </LinearLayout>

            <LinearLayout
                style="@style/topLinearLayout"
                android:layout_width="0dp"
                android:layout_weight="0.5">

                <TextView
                    android:id="@+id/code_lines_value"
                    style="@style/textView.number"
                    android:text="@string/number"/>

                <TextView
                    style="@style/textView.text"
                    android:text="@string/code_lines_number"/>

            </LinearLayout>

            <LinearLayout
                style="@style/line_vertical">
            </LinearLayout>

            <LinearLayout
                style="@style/topLinearLayout"
                android:layout_width="0dp"
                android:layout_weight="0.25">

                <TextView
                    android:id="@+id/projects_value"
                    style="@style/textView.number"
                    android:text="@string/number"/>

                <TextView
                    style="@style/textView.text"
                    android:text="@string/projects_number"/>

            </LinearLayout>



        </LinearLayout>


        <LinearLayout
            style="@style/linearLayout">

            <ListView
                android:id="@+id/repositories_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_large_32">

            </ListView>

        </LinearLayout>

        <LinearLayout
            style="@style/line_horizontal">
        </LinearLayout>

        <LinearLayout
            style="@style/linearLayout">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/my_circle" />

            <LinearLayout
                style="@style/infoLinearLayout">

                  <TextView
                        android:id="@+id/user_info"
                        style="@style/textView_user_content"
                        android:textSize="@dimen/font_normal_14"
                        android:hint="@string/about_my"
                        android:text="@string/my"
                        />

                </LinearLayout>


        </LinearLayout>


    </LinearLayout>

<!--</app:android.support.v4.widget.NestedScrollView> -->


