<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_coordinator_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:ignore="contentDescription"
    >
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:fitsSystemWindows="true"
    tools:ignore="contentDescription">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/login_bg"/>

    <android.support.v7.widget.CardView
        android:id = "@+id/authorization_box"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity = "center"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/line_size_2"
        app:cardElevation="@dimen/spacing_small_8"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation = "vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom ="@dimen/spacing_normal_16"
                android:paddingTop = "@dimen/spacing_large_32">
                
                <View
                    android:layout_width="4dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="20dp"
                    android:background="@color/color_accent">
                </View>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/spacing_small_8"
            android:paddingLeft="@dimen/spacing_small_8"
            android:paddingTop="@dimen/spacing_small_8"
            android:textAllCaps="true"
            android:text="@string/top_enter"
            android:textSize="@dimen/font_large_20"
            android:fontFamily="@string/ff_medium"
            android:textColor="@color/color_accent"
            />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:paddingBottom="@dimen/spacing_medium_24"
                android:paddingLeft="@dimen/spacing_medium_24"
                android:paddingRight="@dimen/spacing_medium_24">

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            >

            <EditText
                android:id="@+id/enter_user_mail"
                style="@style/editText_login"
                android:inputType="textEmailAddress"
                android:hint="@string/enter_mail"
                android:minWidth="192dp"
                android:text=""
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            >

            <EditText
                android:id="@+id/enter_password"
                style="@style/editText_login"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:minWidth="192dp"
                android:textColor="@color/grey"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_in"
            style="@style/AppTheme.Button.Red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:text="@string/top_enter"
            android:minWidth="126dp"
            android:textAllCaps="true"
            android:layout_marginBottom="@dimen/spacing_normal_16"
            android:theme="@style/AppTheme.Button.Red"/>

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:text="@string/forget_password"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:textColor="@color/grey"
            android:textSize="@dimen/font_normal_14"
            />

                </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>



</FrameLayout>
    </android.support.design.widget.CoordinatorLayout>