<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:xmnls="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="2dp"
    android:layout_marginTop="@dimen/spacing_small_8"
    app:cardBackgroundColor="@color/white"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <ImageView
                android:id="@+id/user_photo"
                android:layout_width="512dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                />
            
            <TextView
                android:id="@+id/user_full_name_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Фамилия Имя"
                android:textColor="@color/white"
                android:fontFamily="@string/ff_medium"
                android:textSize="@dimen/font_huge_24"
                android:paddingLeft="@dimen/spacing_normal_16"
                android:paddingRight="@dimen/spacing_normal_16"
                android:paddingBottom="@dimen/spacing_medium_24"
                android:layout_gravity="bottom"/>
        </FrameLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_huge_72"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_weight="0.25">
                <TextView
                    android:id="@+id/rating_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:fontFamily="@string/ff_medium"
                    android:textSize="@dimen/font_large_20"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/ff_regular"
                    android:textSize="@dimen/font_normal_14"
                    android:text="@string/range"
                    android:textColor="@color/black">

                </TextView>

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_weight="0.5">
                <TextView
                    android:id="@+id/code_lines_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:fontFamily="@string/ff_medium"
                    android:textSize="@dimen/font_large_20"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/ff_regular"
                    android:textSize="@dimen/font_normal_14"
                    android:text="@string/code_lines_number"
                    android:textColor="@color/black">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_weight="0.25">
                <TextView
                    android:id="@+id/projects_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:fontFamily="@string/ff_medium"
                    android:textSize="@dimen/font_large_20"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/ff_regular"
                    android:textSize="@dimen/font_normal_14"
                    android:text="@string/projects_number"
                    android:textColor="@color/black">

                </TextView>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/bio_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey_light"
            android:text="@string/my"
            android:maxLines="3"
            android:paddingRight="@dimen/spacing_normal_16"
            android:paddingLeft="@dimen/spacing_normal_16"
            android:fontFamily="@string/ff_regular"
            android:textSize="@dimen/font_normal_14"/>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_light"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:layout_marginBottom="@dimen/spacing_small_8">

        </LinearLayout>

        <Button
            android:id="@+id/more_info_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Просмотр"
            android:textColor="@color/color_accent"
            android:paddingLeft="@dimen/spacing_normal_16"
            android:paddingRight="@dimen/spacing_normal_16"/>


        



    </LinearLayout>
    


</android.support.v7.widget.CardView>

